update API Layer and test